// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat schema test case Should create channel 1`] = `
Object {
  "createChannel": Object {
    "name": "test-foo",
  },
}
`;

exports[`Chat schema test case Should create message 1`] = `
Object {
  "createMessage": Object {
    "channel": Object {
      "name": "some-channel",
    },
    "text": "Some message",
  },
}
`;

exports[`Chat schema test case Should return all channels 1`] = `
Object {
  "getChannels": Array [
    Object {
      "name": "asasd",
    },
    Object {
      "name": "test-foo",
    },
    Object {
      "name": "test-foo1",
    },
  ],
}
`;

exports[`Chat schema test case Should return channel by id 1`] = `
Object {
  "getChannel": Object {
    "name": "test-foo",
  },
}
`;

exports[`message-message-1 1`] = `
Object {
  "channel": Object {
    "name": "some-channel",
  },
  "text": "message-1",
}
`;

exports[`message-message-2 1`] = `
Object {
  "channel": Object {
    "name": "some-channel",
  },
  "text": "message-2",
}
`;

exports[`message-message-3 1`] = `
Object {
  "channel": Object {
    "name": "some-channel",
  },
  "text": "message-3",
}
`;

exports[`message-message-4 1`] = `
Object {
  "channel": Object {
    "name": "some-channel",
  },
  "text": "message-4",
}
`;
